@@ -44,6 +44,7 @@
   <adapter factory=".catalog.getDataGeographicCoverage" name="getGeographicCoverage" />
   <adapter factory=".catalog.getEEAFigureGeographicCoverage" name="getGeographicCoverage" />
 
+  <utility factory=".vocabulary.ReportingObligations" />
 
   <utility
     factory=".vocabulary.Organisations"
